# drones-sim

./: .gitignore  README.md  pyproject.toml
.github/skills/drone-sim-dev/: SKILL.md
.github/workflows/: ci.yml
docs/: control.md  drones-dynamics.md  modeling.md  planning.md  sensors.md  simulation.md  state-estimation.md  testing.md
examples/: 01_imu_ekf_basic.py  02_ekf_adaptive.py  03_waypoint_nav.py  04_viser_viewer.py  05_full_pipeline.py  06_trajectory_following.py  07_rl_hover.py  08_rl_vs_pid.py
src/drones_sim/: __init__.py  math_utils.py  trajectory.py
src/drones_sim/control/: __init__.py  cascaded.py  lqr.py  pid.py
src/drones_sim/dynamics/: __init__.py  disturbances.py  quadcopter.py
src/drones_sim/estimation/: __init__.py  ahrs.py  ekf.py
src/drones_sim/logging/: __init__.py  csv_logger.py  json_logger.py
src/drones_sim/models/: __init__.py  quadcopter.urdf  urdf_loader.py
src/drones_sim/rl/: __init__.py  actions.py  env.py  observations.py  reward.py  tasks.py
src/drones_sim/sensors/: __init__.py  gps.py  imu.py  models.py
src/drones_sim/visualization/: __init__.py  plots.py  viewer.py
tests/: test_cascaded.py  test_disturbances.py  test_dynamics.py  test_dynamics_quaternion.py  test_ekf.py  test_gps.py  test_logging.py  test_lqr.py  test_math_utils.py  test_pid.py  test_rl_env.py  test_rl_training.py  test_sensor_models.py  test_trajectory.py
training/: eval_policy.py  train_ppo.py
training/configs/: ppo_hover.yaml  ppo_hover_vel.yaml
