[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drones-sim"
version = "0.1.0"
description = "Quadcopter dynamics simulation with cascaded PID control and EKF sensor fusion"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "viser>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
