[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drones-sim"
version = "0.1.0"
description = "Quadcopter dynamics simulation with cascaded PID control and EKF sensor fusion"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "viser>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]   # long lines — not worth a mass reformat

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.setuptools.package-data]
"drones_sim.models" = ["*.urdf"]
